--- a/exp-realsys.ipynb
+++ b/exp-realsys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,106 +30,8 @@
     "    )\n",
     "    .run()\n",
     "    .hamiltonian.second_q_op()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hamiltonian simulation:\n",
-      "  Solve ground state:\n",
-      "Statevector([-2.32088474e-17-1.32768052e-17j,\n",
-      "             -1.29593802e-16+2.54992228e-17j,\n",
-      "              1.09129429e-19+7.39911913e-18j,\n",
-      "              2.50876051e-16-8.50052294e-17j,\n",
-      "              6.31998588e-17+1.76362353e-16j,\n",
-      "             -7.06503802e-01-6.98864874e-01j,\n",
-      "             -8.62676944e-17-3.36979993e-17j,\n",
-      "              6.60724127e-18+2.58509894e-17j,\n",
-      "              1.09888642e-17+8.45645702e-18j,\n",
-      "             -8.88352769e-17-1.64176064e-16j,\n",
-      "              7.92953359e-02+7.84379713e-02j,\n",
-      "             -1.15845698e-17-2.30657371e-17j,\n",
-      "              1.33221826e-16-4.94907237e-17j,\n",
-      "             -7.40020536e-18-8.88351305e-18j,\n",
-      "             -8.23486807e-19-1.63446144e-17j,\n",
-      "              1.32576421e-16+1.16797329e-16j],\n",
-      "            dims=(2, 2, 2, 2))\n",
-      "    Ground energy = -1.8572750302023833\n",
-      "  Construct and transpile Pauli evolution:\n",
-      "    Time duration    = 1.0\n",
-      "    Basis gates      = cx, u3\n",
-      "    Synthesis method = LieTrotter\n",
-      "  Circuit summary:\n",
-      "    Depth = 91\n",
-      "    Gates = 58 U3, 52 CX\n"
-     ]
-    }
-   ],
-   "source": [
-    "from qiskit import transpile\n",
-    "from qiskit_nature.second_q.mappers import JordanWignerMapper, BravyiKitaevMapper\n",
-    "from utility import Execution\n",
+    ")\n",
     "\n",
-    "jwsim = Execution(hamiltonian, JordanWignerMapper())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bk_job = aria_2.run(bksim.circuit, shots=3000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0000': 245,\n",
-       " '0001': 143,\n",
-       " '0010': 798,\n",
-       " '0011': 232,\n",
-       " '0100': 266,\n",
-       " '0101': 120,\n",
-       " '0110': 155,\n",
-       " '0111': 457,\n",
-       " '1000': 121,\n",
-       " '1001': 52,\n",
-       " '1010': 109,\n",
-       " '1011': 87,\n",
-       " '1100': 44,\n",
-       " '1101': 45,\n",
-       " '1110': 59,\n",
-       " '1111': 67}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bk_job.result().data()[\"counts\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from qiskit.quantum_info import Statevector\n",
     "from qiskit_nature.second_q.mappers.fermionic_mapper import FermionicMapper\n",
     "from statistics import mean, variance\n",
@@ -155,52 +57,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1.1102230246251565e-16+0j) 245\n",
-      "(-0.4718960072811417+0j) 143\n",
-      "(-1.2445845498133268+0j) 798\n",
-      "(-1.25633907300325+0j) 232\n",
-      "(-0.24521829183026578+0j) 266\n",
-      "(-0.4718960072811416+0j) 120\n",
-      "(-1.0636533500290954+0j) 155\n",
-      "(-0.35332510410715445+0j) 457\n",
-      "(-1.2445845498133268+0j) 121\n",
-      "(-0.35332510410715456+0j) 52\n",
-      "(0.21427823841947297+0j) 109\n",
-      "(-1.1606317377577644+0j) 87\n",
-      "(-1.0636533500290954+0j) 44\n",
-      "(-1.2563390730032498+0j) 45\n",
-      "(-1.8369679912029837+0j) 59\n",
-      "(-1.1606317377577642+0j) 67\n"
+      "(3.3306690738754696e-16+0j) 212\n",
+      "(-1.2445845498133266+0j) 294\n",
+      "(-0.24521829183026567+0j) 140\n",
+      "(-1.0636533500290954+0j) 105\n",
+      "(-1.2445845498133266+0j) 765\n",
+      "(0.2142782384194732+0j) 284\n",
+      "(-1.0636533500290954+0j) 241\n",
+      "(-1.8369679912029837+0j) 162\n",
+      "(-0.4718960072811415+0j) 105\n",
+      "(-0.3533251041071544+0j) 190\n",
+      "(-0.4718960072811416+0j) 51\n",
+      "(-1.2563390730032498+0j) 73\n",
+      "(-1.2563390730032498+0j) 107\n",
+      "(-1.1606317377577642+0j) 107\n",
+      "(-0.35332510410715445+0j) 81\n",
+      "(-1.1606317377577642+0j) 83\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.7787958019321397, 0.2720765019864728)"
+       "(-0.8577104655819423, 0.3339685176741624)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process(bk_job.result().data()[\"counts\"], BravyiKitaevMapper(), hamiltonian)"
+    "from qiskit_nature.second_q.mappers import JordanWignerMapper, BravyiKitaevMapper\n",
+    "\n",
+    "jw_data = {\n",
+    "    \"0000\": 0.07066666666666667,\n",
+    "    \"1000\": 0.098,\n",
+    "    \"0100\": 0.04666666666666667,\n",
+    "    \"1100\": 0.035,\n",
+    "    \"0010\": 0.255,\n",
+    "    \"1010\": 0.09466666666666666,\n",
+    "    \"0110\": 0.08033333333333334,\n",
+    "    \"1110\": 0.054,\n",
+    "    \"0001\": 0.035,\n",
+    "    \"1001\": 0.06333333333333334,\n",
+    "    \"0101\": 0.017,\n",
+    "    \"1101\": 0.024333333333333332,\n",
+    "    \"0011\": 0.035666666666666666,\n",
+    "    \"1011\": 0.035666666666666666,\n",
+    "    \"0111\": 0.027,\n",
+    "    \"1111\": 0.027666666666666666,\n",
+    "}\n",
+    "\n",
+    "jw_data = {k: round(v * 3000) for k, v in jw_data.items()}\n",
+    "\n",
+    "process(jw_data, BravyiKitaevMapper(), hamiltonian)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jordan-Wigner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hamiltonian simulation:\n",
+      "  Solve ground state:\n",
+      "    Ground energy = -1.85727503020238\n",
+      "  Construct and transpile Pauli evolution:\n",
+      "    Time duration    = 1.0\n",
+      "    Basis gates      = cx, u3\n",
+      "    Synthesis method = LieTrotter\n",
+      "  Circuit summary:\n",
+      "    Depth = 89\n",
+      "    Gates = 57 U3, 50 CX, 4 MEASURE\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit_nature.second_q.mappers import JordanWignerMapper\n",
+    "from utility import Execution\n",
+    "\n",
+    "jwsim = Execution(hamiltonian, JordanWignerMapper())\n",
+    "jwjob = aria_2.run(jwsim.circuit, shots=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'process' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocess\u001b[49m(jwjob\u001b[38;5;241m.\u001b[39mresult()\u001b[38;5;241m.\u001b[39mdata()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcounts\u001b[39m\u001b[38;5;124m\"\u001b[39m], JordanWignerMapper(), hamiltonian)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'process' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "process(jwjob.result().data()[\"counts\"], JordanWignerMapper(), hamiltonian)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bravyi-Kitaev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from qiskit_nature.second_q.mappers import BravyiKitaevMapper\n",
+    "from utility import Execution\n",
+    "\n",
+    "bksim = Execution(hamiltonian, BravyiKitaevMapper())\n",
+    "bkjob = aria_2.run(bksim.circuit, shots=3000)"
+   ]
   }
  ],
  "metadata": {
