--- a/exp-realsys.ipynb
+++ b/exp-realsys.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
      "text": [
       "Hamiltonian simulation:\n",
       "  Solve ground state:\n",
-      "    Ground energy = -1.8572750302023748\n",
+      "    Ground energy = -1.8572750302023837\n",
       "  Construct and transpile Pauli evolution:\n",
       "    Time duration    = 1.0\n",
       "    Basis gates      = cx, u3\n",
@@ -90,6 +90,26 @@
     "\n",
     "jwsim = Execution(hamiltonian, JordanWignerMapper())\n",
     "jwjob = aria_2.run(jwsim.circuit, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:braket:us-east-1:849837135378:quantum-task/e5b0c8e4-7c3e-4342-b08d-6a06fa68d17a'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jwjob.job_id()"
    ]
   },
   {
@@ -131,7 +151,7 @@
     }
    ],
    "source": [
-    "process(jwjob.result().data()[\"counts\"], JordanWignerMapper(), hamiltonian)"
+    "jwresult = (\"JW\", *process(jwjob.result().data()[\"counts\"], JordanWignerMapper(), hamiltonian))"
    ]
   },
   {
@@ -143,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +172,14 @@
      "text": [
       "Hamiltonian simulation:\n",
       "  Solve ground state:\n",
-      "    Ground energy = -1.8572750302023782\n",
+      "    Ground energy = -1.8572750302023808\n",
       "  Construct and transpile Pauli evolution:\n",
       "    Time duration    = 1.0\n",
       "    Basis gates      = cx, u3\n",
       "    Synthesis method = LieTrotter\n",
       "  Circuit summary:\n",
-      "    Depth = 88\n",
-      "    Gates = 52 CX, 48 U3, 4 MEASURE\n"
+      "    Depth = 91\n",
+      "    Gates = 56 CX, 49 U3, 4 MEASURE\n"
      ]
     }
    ],
@@ -169,6 +189,26 @@
     "\n",
     "bksim = Execution(hamiltonian, BravyiKitaevMapper())\n",
     "bkjob = aria_2.run(bksim.circuit, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:braket:us-east-1:849837135378:quantum-task/9a0fae9f-340e-46ee-8e77-e24c9516e9a9'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bkjob.job_id()"
    ]
   },
   {
@@ -210,7 +250,7 @@
     }
    ],
    "source": [
-    "process(bkjob.result().data()[\"counts\"], BravyiKitaevMapper(), hamiltonian)"
+    "bkresult = (\"BK\", *process(bkjob.result().data()[\"counts\"], BravyiKitaevMapper(), hamiltonian))"
    ]
   },
   {
@@ -222,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,14 +271,14 @@
      "text": [
       "Hamiltonian simulation:\n",
       "  Solve ground state:\n",
-      "    Ground energy = -1.8572750302023788\n",
+      "    Ground energy = -1.8572750302023837\n",
       "  Construct and transpile Pauli evolution:\n",
       "    Time duration    = 1.0\n",
       "    Basis gates      = cx, u3\n",
       "    Synthesis method = LieTrotter\n",
       "  Circuit summary:\n",
       "    Depth = 81\n",
-      "    Gates = 59 U3, 47 CX, 4 MEASURE\n"
+      "    Gates = 58 U3, 47 CX, 4 MEASURE\n"
      ]
     }
    ],
@@ -248,6 +288,26 @@
     "\n",
     "bttsim = Execution(hamiltonian, TernaryTreeMapper())\n",
     "bttjob = aria_2.run(bttsim.circuit, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:braket:us-east-1:849837135378:quantum-task/449999b2-c382-490c-ab8d-a1ab36b5b57a'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bttjob.job_id()"
    ]
   },
   {
@@ -289,7 +349,7 @@
     }
    ],
    "source": [
-    "process(bttjob.result().data()[\"counts\"], TernaryTreeMapper(), hamiltonian)"
+    "bttresult = (\"BTT\", *process(bttjob.result().data()[\"counts\"], TernaryTreeMapper(), hamiltonian))"
    ]
   },
   {
@@ -301,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -310,14 +370,14 @@
      "text": [
       "Hamiltonian simulation:\n",
       "  Solve ground state:\n",
-      "    Ground energy = -1.8572750302023833\n",
+      "    Ground energy = -1.8572750302023815\n",
       "  Construct and transpile Pauli evolution:\n",
       "    Time duration    = 1.0\n",
       "    Basis gates      = cx, u3\n",
       "    Synthesis method = LieTrotter\n",
       "  Circuit summary:\n",
       "    Depth = 77\n",
-      "    Gates = 45 U3, 45 CX, 4 MEASURE\n"
+      "    Gates = 46 U3, 45 CX, 4 MEASURE\n"
      ]
     }
    ],
@@ -328,6 +388,26 @@
     "fh = FermihedralMapper.molecule()\n",
     "fhsim = Execution(hamiltonian, fh)\n",
     "fhjob = aria_2.run(fhsim.circuit, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:braket:us-east-1:849837135378:quantum-task/90c7de6f-eae7-467f-8e20-41913b6ff5a9'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fhjob.job_id()"
    ]
   },
   {
@@ -369,7 +449,7 @@
     }
    ],
    "source": [
-    "process(fhjob.result().data()[\"counts\"], fh, hamiltonian)"
+    "fhresult = (\"FH\", *process(fhjob.result().data()[\"counts\"], fh, hamiltonian))"
    ]
   },
   {
@@ -381,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +484,7 @@
      "text": [
       "Hamiltonian simulation:\n",
       "  Solve ground state:\n",
-      "    Ground energy = -1.857275030202381\n",
+      "    Ground energy = -1.8572750302023773\n",
       "  Construct and transpile Pauli evolution:\n",
       "    Time duration    = 1.0\n",
       "    Basis gates      = cx, u3\n",
@@ -422,6 +502,26 @@
     "mapper = HamiltonianTernaryBonsaiMapper(hamiltonian)\n",
     "opttreesim = Execution(hamiltonian, mapper)\n",
     "opttreejob = aria_2.run(opttreesim.circuit, shots=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arn:aws:braket:us-east-1:849837135378:quantum-task/d7d751d9-b64d-4225-93ec-da4a835f8614'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opttreejob.job_id()"
    ]
   },
   {
@@ -463,7 +563,7 @@
     }
    ],
    "source": [
-    "process(opttreejob.result().data()[\"counts\"], mapper, hamiltonian)"
+    "opttreeresult = (\"HATT\", *process(opttreejob.result().data()[\"counts\"], mapper, hamiltonian))"
    ]
   },
   {
@@ -543,28 +643,32 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "jw = (\"JW\", -1.3209011193140847, 0.3117595321527502)\n",
-    "bk = (\"BK\", -1.2588759249221313, 0.43528868011844934)\n",
-    "btt = (\"BTT\", -1.0589417409162922, 0.1347010014665952)\n",
-    "fh = (\"FH\", -1.4167123485497235, 0.3222858718976118)\n",
-    "opttree = (\"OptTree\", -1.3326066364085893, 0.35421429872540877)\n",
+    "plt.rc(\"font\", size=32, family=\"serif\", serif=\"cmr10\")\n",
+    "plt.rcParams['axes.formatter.use_mathtext'] = True\n",
+    "plt.rcParams['mathtext.fontset'] = 'cm'\n",
     "\n",
     "THEO = -1.857275030202381\n",
     "\n",
     "\n",
-    "for n, (mapper, exp, var) in enumerate((jw, bk, btt, fh, opttree)):\n",
-    "    plt.plot([n - 0.2, n + 0.2], [exp, exp], color=\"red\")\n",
+    "plt.figure(figsize=(13, 5), layout=\"constrained\")\n",
+    "for n, (mapper, exp, var) in enumerate((jwresult, bkresult, bttresult, fhresult, opttreeresult)):\n",
+    "    plt.plot([n - 0.3, n + 0.3], [exp, exp], color=\"C3\", linewidth=5)\n",
+    "    plt.text(n - 0.46, exp + 0.03, f\"{exp:.3f}\", color=\"C3\", fontsize=28)\n",
+    "    # plt.errorbar(n, exp, var, color=\"black\", linewidth=3)\n",
+    "    # plt.text(n + 0.05, exp - var, f\"{var:.3f}\", fontsize=28)\n",
     "\n",
     "plt.xlim(0 - 0.5, 4 + 0.5)\n",
-    "plt.xticks([0, 1, 2, 3, 4], [\"JW\", \"BK\", \"BTT\", \"FH\", \"OptTree\"])\n",
+    "plt.ylim(THEO - 0.3, -0.8)\n",
+    "plt.yticks([-2.0, -1.6, -1.2, -0.8])\n",
+    "plt.ylabel(\"Energy\")\n",
+    "plt.xticks([0, 1, 2, 3, 4], [\"JW\", \"BK\", \"BTT\", \"FH\", \"HATT\"], fontfamily=\"sans serif\")\n",
     "\n",
-    "plt.plot([-1, 5], [THEO, THEO])\n",
+    "plt.plot([-1, 5], [THEO, THEO], linewidth=3)\n",
+    "plt.annotate(f\"THEORETICAL={THEO:.3f}\", (1.8, THEO - 0.01), (2, THEO - 0.28), arrowprops=dict(facecolor='C0', edgecolor=\"C0\", shrink=0.05, width=2), fontfamily=\"monospace\", color=\"C0\")\n",
     "\n",
-    "plt.show()"
+    "plt.savefig(\"realsystem.pdf\")"
    ]
   },
   {
