test for vacuum state preservation

--- a/exp-forte.ipynb
+++ b/exp-forte.ipynb
@@ -354,14 +354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                0/6 [00:00<?, ?it/s]]\r"
+     "ename": "NameError",
+     "evalue": "name 'hamiltonian' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m fhtask \u001b[38;5;241m=\u001b[39m AwsQuantumTask(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marn:aws:braket:us-east-1:849837135378:quantum-task/f4b13f36-5583-472f-a19e-e2c922db6eb7\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m hatttask \u001b[38;5;241m=\u001b[39m AwsQuantumTask(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marn:aws:braket:us-east-1:849837135378:quantum-task/efe8ff7b-1f4e-45ed-a126-dfce20d0407d\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m tasks \u001b[38;5;241m=\u001b[39m [(jwtask, JordanWignerMapper()), (bktask, BravyiKitaevMapper()), (btttask, TernaryTreeMapper(pair\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)), (fhtask, FermihedralMapper\u001b[38;5;241m.\u001b[39mmolecule()), (hatttask, HamiltonianTernaryBonsaiMapper(\u001b[43mhamiltonian\u001b[49m))]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hamiltonian' is not defined"
      ]
     }
    ],
